--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -35,16 +35,16 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v3
 
-#      - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
-#        working-directory: ./
-#        run: |
-#          npm install && npm run build
+      - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
+        working-directory: ./
+        run: |
+          npm install && npm run build
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
           # Upload entire repository
-          path: './src/.'
+          path: './dist/.'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
