--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"main": "index.js",
 	"license": "MIT",
 	"scripts": {
-		"start": "rm -rf .cache && parcel ./src/index.html --open"
+		"start": "rm -rf .cache && parcel ./src/index.html --open",
+		"build": "parcel ./src/index.html build"
 	},
 	"browserslist": [
 		"last 1 Chrome versions"
