--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"license": "MIT",
 	"scripts": {
 		"start": "rm -rf .cache && parcel ./src/index.html --open",
-		"build": "parcel ./src/index.html build"
+		"build": "parcel build ./src/index.html"
 	},
 	"browserslist": [
 		"last 1 Chrome versions"
