--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,6 +9,9 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
+env:
+  GITHUB_PAGES_REPO_RUL: https://alcibiadescleinias.github.io/metamask-simple-frontend-template/
+
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
@@ -38,7 +41,7 @@ jobs:
       - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
         working-directory: ./
         run: |
-          npm install && npm run build
+          npm install && parcel build ./src/index.html --public-url {{ env.GITHUB_PAGES_REPO_RUL }}
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
