--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "zkTurk",
 	"version": "1.0.0",
-	"main": "index.js",
+	"main": "index.html",
 	"license": "MIT",
 	"scripts": {
 		"start": "rm -rf .cache && parcel ./src/index.html --open"
