--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,6 +11,7 @@ on:
 
 env:
   GITHUB_PAGES_REPO_RUL: https://alcibiadescleinias.github.io/metamask-simple-frontend-template/
+  CONTRACT_ADDRESS: 0x685Ef2AF2d5B763DDA502c0Fa256101938567754
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -40,7 +41,7 @@ jobs:
 
       - name: create .env
         run: |
-          echo "CONTRACT_ADDRESS=0x685Ef2AF2d5B763DDA502c0Fa256101938567754" > .env
+          echo "CONTRACT_ADDRESS=${{ env.CONTRACT_ADDRESS }}" > .env
 
       - name: Install and Build 🔧 # This example project is built using npm and outputs the result to the 'build' folder. Replace with the commands required to build your project, or remove this step entirely if your site is pre-built.
         working-directory: ./
